# trading-algo

./: .sample.env  auto_login.py  pyproject.toml
brokers/: kotak_neo.py  zerodha.py
strategy/: oi_tracker.py
strategy/configs/: oi_tracker.yml
