[project]
name = "trading-algo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kiteconnect>=5.0.1",
    "mibian>=0.1.3",
    "pandas>=2.3.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "pygame",
    "termcolor",
]

[tool.setuptools]
packages = ["brokers", "strategy"]
